# labvision-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README_zh.md
docs/architecture/: dependencies.md  source-responsibility.md
docs/provenance/: asset-inventory.md  open-questions.md
douyin_assets/: CONTENT_PLAN.md
examples/: 01_basic_processing.py  01_basic_processing_zh.py  _synthetic.py
scripts/: check_import_boundaries.py  generate_douyin_assets.py  run_examples.ps1
src/labvision/: __init__.py
src/labvision/core/: __init__.py  colormap.py  io.py  preprocess.py  roi.py
src/labvision/report/: __init__.py  manifest.py  markdown.py
src/labvision/viz/: __init__.py  figure.py  overlay.py
tests/: conftest.py
tests/architecture/: test_boundaries.py  test_provenance_docs.py
tests/examples/: test_examples.py
tests/unit/core/: test_core_processing.py
tests/unit/report/: test_report.py
tests/unit/viz/: test_viz.py
