[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labvision-ai"
version = "0.1.0"
description = "MIT-licensed open core image-processing utilities for reproducible laboratory workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "LabVision AI maintainers" }]
keywords = ["image-processing", "laboratory", "scientific-computing", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
image = ["Pillow>=10", "tifffile>=2024.0"]
viz = ["matplotlib>=3.8", "Pillow>=10"]
dev = ["pytest>=8", "build>=1.2"]
all = ["Pillow>=10", "tifffile>=2024.0", "matplotlib>=3.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["examples: installed example runner tests"]
addopts = "-ra"
